@@ -22,6 +22,9 @@ package $schema.getNamespace();
 #if ($schema.getDoc())
 /** $schema.getDoc() */
 #end
+#foreach ($annotation in $this.javaAnnotations($schema))
+@$annotation
+#end
 @org.apache.avro.specific.FixedSize($schema.getFixedSize())
 public class ${this.mangle($schema.getName())} extends org.apache.avro.specific.SpecificFixed {
   public static final org.apache.avro.Schema SCHEMA$ = new org.apache.avro.Schema.Parser().parse("${this.javaEscape($schema.toString())}");
