@@ -22,11 +22,17 @@ package $schema.getNamespace();
 #if ($schema.getDoc())
 /** $schema.getDoc() */
 #end
+#foreach ($annotation in $this.javaAnnotations($schema))
+@$annotation
+#end
 public class ${this.mangle($schema.getName())}#if ($schema.isError()) extends org.apache.avro.specific.SpecificExceptionBase#else extends org.apache.avro.specific.SpecificRecordBase#end implements org.apache.avro.specific.SpecificRecord {
   public static final org.apache.avro.Schema SCHEMA$ = new org.apache.avro.Schema.Parser().parse("${this.javaEscape($schema.toString())}");
 #foreach ($field in $schema.getFields())
 #if ($field.doc())
   /** $field.doc() */
+#end
+#foreach ($annotation in $this.javaAnnotations($field))
+  @$annotation
 #end
   @Deprecated public ${this.javaUnbox($field.schema())} ${this.mangle($field.name(), $schema.isError())};
 #end
