@@ -104,6 +104,12 @@
       <artifactId>avro-ipc</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>avro-ipc</artifactId>
+      <classifier>tests</classifier>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>     
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
